[gd_scene load_steps=20 format=3 uid="uid://bo70wutnad4xt"]

[ext_resource type="Texture2D" uid="uid://c73l3yjlgry04" path="res://main_scenes/Sprites/button.png" id="1_elfhh"]
[ext_resource type="Script" path="res://main_scenes/main_menu.gd" id="1_tt8aq"]
[ext_resource type="Texture2D" uid="uid://lk143esv3ko5" path="res://main_scenes/Sprites/UntitledArtwork19.png" id="2_6y2oy"]
[ext_resource type="Texture2D" uid="uid://d3gd73opc6jdt" path="res://main_scenes/Sprites/selected.png" id="2_errrw"]
[ext_resource type="Texture2D" uid="uid://beigr16w85pqw" path="res://main_scenes/Sprites/highlight.png" id="3_y6ntl"]
[ext_resource type="FontFile" uid="uid://15y6dlwjteos" path="res://fonts/rpg-font.ttf" id="4_6ohk8"]
[ext_resource type="Texture2D" uid="uid://dnqgvl4jjlhon" path="res://assets/ui/menu_ui/Sprites/pause.png" id="6_m8ag0"]
[ext_resource type="FontFile" uid="uid://cwbqc3ck1uyrt" path="res://fonts/edosz.ttf" id="7_juvk8"]
[ext_resource type="PackedScene" uid="uid://d3fefj61clhik" path="res://assets/ui/menu_ui/volume.tscn" id="8_l78gc"]

[sub_resource type="Animation" id="Animation_fhfio"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("settings:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("settings:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -678)]
}

[sub_resource type="Animation" id="Animation_bt2eb"]
resource_name = "enter"
length = 0.333337
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.333333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_aeb06"]
resource_name = "quit"
length = 0.333337
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.333333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="Animation" id="Animation_jbp0r"]
resource_name = "settings_in"
length = 0.333337
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("settings:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("settings:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.266667, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -678), Vector2(0, 32), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_8irun"]
resource_name = "settings_out"
length = 0.333337
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("settings:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("settings:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.333333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -678)]
}

[sub_resource type="Animation" id="Animation_jsyyn"]
resource_name = "start"
length = 0.333337
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.333333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uwdk0"]
_data = {
"RESET": SubResource("Animation_fhfio"),
"enter": SubResource("Animation_bt2eb"),
"quit": SubResource("Animation_aeb06"),
"settings_in": SubResource("Animation_jbp0r"),
"settings_out": SubResource("Animation_8irun"),
"start": SubResource("Animation_jsyyn")
}

[sub_resource type="Animation" id="Animation_2ha4a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-900, -1403)]
}

[sub_resource type="Animation" id="Animation_tk2dq"]
resource_name = "move"
length = 10.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 10),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-900, -1403), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nlmmt"]
_data = {
"RESET": SubResource("Animation_2ha4a"),
"move": SubResource("Animation_tk2dq")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tt8aq")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.385492, 0.385493, 0.385492, 1)
layout_mode = 0
offset_left = -900.0
offset_top = -1403.0
offset_right = 124.0
offset_bottom = -379.0
scale = Vector2(2, 2)
texture = ExtResource("2_6y2oy")

[node name="ui" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 362.0
offset_top = 204.0
offset_right = 826.0
offset_bottom = 626.0

[node name="start" type="TextureButton" parent="ui"]
process_mode = 3
layout_mode = 0
offset_left = 105.0
offset_top = 93.0
offset_right = 150.0
offset_bottom = 106.0
scale = Vector2(5.70208, 5.83775)
texture_normal = ExtResource("1_elfhh")
texture_pressed = ExtResource("2_errrw")
texture_hover = ExtResource("3_y6ntl")

[node name="Label" type="Label" parent="ui/start"]
layout_mode = 0
offset_left = 12.627
offset_top = 2.56947
offset_right = 74.627
offset_bottom = 25.5695
scale = Vector2(0.312169, 0.280678)
theme_override_colors/font_color = Color(0.188235, 0.172549, 0.12549, 1)
theme_override_fonts/font = ExtResource("4_6ohk8")
text = "Start"
horizontal_alignment = 1
vertical_alignment = 1

[node name="settings" type="TextureButton" parent="ui"]
process_mode = 3
layout_mode = 0
offset_left = 104.0
offset_top = 180.0
offset_right = 149.0
offset_bottom = 193.0
scale = Vector2(5.70208, 5.83775)
texture_normal = ExtResource("1_elfhh")
texture_pressed = ExtResource("2_errrw")
texture_hover = ExtResource("3_y6ntl")

[node name="Label" type="Label" parent="ui/settings"]
layout_mode = 0
offset_left = 12.627
offset_top = 2.56947
offset_right = 74.627
offset_bottom = 25.5695
scale = Vector2(0.312169, 0.280678)
theme_override_colors/font_color = Color(0.188235, 0.172549, 0.12549, 1)
theme_override_fonts/font = ExtResource("4_6ohk8")
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="quit" type="TextureButton" parent="ui"]
process_mode = 3
layout_mode = 0
offset_left = 104.0
offset_top = 268.0
offset_right = 149.0
offset_bottom = 281.0
scale = Vector2(5.70208, 5.83775)
texture_normal = ExtResource("1_elfhh")
texture_pressed = ExtResource("2_errrw")
texture_hover = ExtResource("3_y6ntl")

[node name="Label" type="Label" parent="ui/quit"]
layout_mode = 0
offset_left = 12.627
offset_top = 2.56947
offset_right = 74.627
offset_bottom = 25.5695
scale = Vector2(0.312169, 0.280678)
theme_override_colors/font_color = Color(0.188235, 0.172549, 0.12549, 1)
theme_override_fonts/font = ExtResource("4_6ohk8")
text = "Quit"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="ui"]
layout_mode = 0
offset_left = -51.0
offset_top = -53.0
offset_right = 543.0
offset_bottom = 60.0
theme_override_colors/font_color = Color(0.988235, 0.843137, 0.431373, 1)
theme_override_fonts/font = ExtResource("7_juvk8")
theme_override_font_sizes/font_size = 100
text = "The Dog Park"

[node name="settings" type="Panel" parent="."]
visible = false
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_top = -678.0
offset_right = 1154.0
offset_bottom = -31.0

[node name="TextureRect" type="TextureRect" parent="settings"]
layout_mode = 0
offset_left = 70.0
offset_top = 5.0
offset_right = 1068.0
offset_bottom = 735.0
texture = ExtResource("6_m8ag0")

[node name="baby_mode" type="TextureButton" parent="settings/TextureRect"]
process_mode = 3
layout_mode = 0
offset_left = 499.0
offset_top = 394.0
offset_right = 544.0
offset_bottom = 407.0
scale = Vector2(5.70208, 5.83775)
texture_normal = ExtResource("1_elfhh")
texture_pressed = ExtResource("2_errrw")
texture_hover = ExtResource("3_y6ntl")

[node name="Label" type="Label" parent="settings/TextureRect/baby_mode"]
layout_mode = 0
offset_left = 12.627
offset_top = 2.56947
offset_right = 74.627
offset_bottom = 25.5695
scale = Vector2(0.312169, 0.280678)
theme_override_colors/font_color = Color(0.188235, 0.172549, 0.12549, 1)
theme_override_fonts/font = ExtResource("4_6ohk8")
text = "Baby mode
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="reset" type="TextureButton" parent="settings/TextureRect"]
process_mode = 3
layout_mode = 0
offset_left = 225.0
offset_top = 392.0
offset_right = 270.0
offset_bottom = 405.0
scale = Vector2(5.70208, 5.83775)
texture_normal = ExtResource("1_elfhh")
texture_pressed = ExtResource("2_errrw")
texture_hover = ExtResource("3_y6ntl")

[node name="Label" type="Label" parent="settings/TextureRect/reset"]
layout_mode = 0
offset_left = 12.627
offset_top = 2.56947
offset_right = 74.627
offset_bottom = 25.5695
scale = Vector2(0.312169, 0.280678)
theme_override_colors/font_color = Color(0.188235, 0.172549, 0.12549, 1)
theme_override_fonts/font = ExtResource("4_6ohk8")
text = "Reset game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="back" type="TextureButton" parent="settings/TextureRect"]
process_mode = 3
layout_mode = 0
offset_left = 366.0
offset_top = 497.0
offset_right = 411.0
offset_bottom = 510.0
scale = Vector2(5.70208, 5.83775)
texture_normal = ExtResource("1_elfhh")
texture_pressed = ExtResource("2_errrw")
texture_hover = ExtResource("3_y6ntl")

[node name="Label" type="Label" parent="settings/TextureRect/back"]
layout_mode = 0
offset_left = 12.627
offset_top = 2.56947
offset_right = 74.627
offset_bottom = 25.5695
scale = Vector2(0.312169, 0.280678)
theme_override_colors/font_color = Color(0.188235, 0.172549, 0.12549, 1)
theme_override_fonts/font = ExtResource("4_6ohk8")
text = "Back"
horizontal_alignment = 1
vertical_alignment = 1

[node name="notebooks" type="TextureButton" parent="settings/TextureRect"]
process_mode = 3
layout_mode = 0
offset_left = 365.0
offset_top = 299.0
offset_right = 410.0
offset_bottom = 312.0
scale = Vector2(5.70208, 5.83775)
texture_normal = ExtResource("1_elfhh")
texture_pressed = ExtResource("2_errrw")
texture_hover = ExtResource("3_y6ntl")

[node name="Label" type="Label" parent="settings/TextureRect/notebooks"]
layout_mode = 0
offset_left = 7.71648
offset_top = 2.56949
offset_right = 99.7165
offset_bottom = 25.5695
scale = Vector2(0.312169, 0.280678)
theme_override_colors/font_color = Color(0.188235, 0.172549, 0.12549, 1)
theme_override_fonts/font = ExtResource("4_6ohk8")
text = "View all notebooks
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="volume" type="PanelContainer" parent="settings"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 375.0
offset_top = 199.0
offset_right = 748.0
offset_bottom = 293.0

[node name="VBoxContainer" type="VBoxContainer" parent="settings/volume"]
layout_mode = 2

[node name="Music" type="Label" parent="settings/volume/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.188235, 0.172549, 0.12549, 1)
theme_override_fonts/font = ExtResource("4_6ohk8")
theme_override_font_sizes/font_size = 30
text = "Music"
horizontal_alignment = 1

[node name="Volume2" parent="settings/volume/VBoxContainer" instance=ExtResource("8_l78gc")]
layout_mode = 2
bus_name = "music"

[node name="sfx" type="Label" parent="settings/volume/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_6ohk8")
theme_override_font_sizes/font_size = 30
text = "SFX"
horizontal_alignment = 1

[node name="Volume" parent="settings/volume/VBoxContainer" instance=ExtResource("8_l78gc")]
layout_mode = 2
bus_name = "sfx"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_uwdk0")
}

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_right = 1146.0
offset_bottom = 648.0
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nlmmt")
}
autoplay = "move"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = &"music"

[connection signal="pressed" from="ui/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="ui/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="ui/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="settings/TextureRect/baby_mode" to="." method="_on_baby_mode_pressed"]
[connection signal="pressed" from="settings/TextureRect/reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="settings/TextureRect/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="settings/TextureRect/notebooks" to="." method="_on_notebooks_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
